# stm32f103_cmake

./: .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  STM32F103XX_FLASH.ld  jlink_flash.script  stm32f103_cmake.ioc
Core/Inc/: common.h  iwdg.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  usart.h
Core/Src/: iwdg.c  main.c  stm32f1xx_hal_timebase_tim.c  stm32f1xx_it.c  syscalls.c  sysmem.c  usart.c
FreeRTOS/: tasks.c
FreeRTOS/include/: FreeRTOSConfig.h
USB_DEVICE/App/: usb_device.c  usbd_cdc_if.c  usbd_cdc_if.h
cmake/: gcc-arm-none-eabi.cmake
cmake/freertos/: CMakeLists.txt
cmake/stm32cubemx/: CMakeLists.txt
